# ros-automatic-landing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gtest/: CTestTestfile.cmake  cmake_install.cmake
project_ws/: To-Do
project_ws/Materiale/: .directory
project_ws/Scripts/: create_pkg.sh  create_ws.sh  rosrun_node.sh
project_ws/devel/: .catkin  .rosinstall  setup.sh
project_ws/devel/lib/landing_pkg/: ar_sys_listener
project_ws/devel/lib/pkgconfig/: landing_pkg.pc
project_ws/devel/share/landing_pkg/cmake/: landing_pkg-msg-extras.cmake  landing_pkg-msg-paths.cmake  landing_pkgConfig.cmake
project_ws/src/cvg_sim_gazebo_plugins/src/: gazebo_ros_sonar.cpp  quadrotor_simple_controller.cpp  quadrotor_state_controller.cpp
project_ws/src/landing_pkg/: CMakeLists.txt  package.xml
project_ws/src/landing_pkg/action/: AutoLanding.action  automatic_landing.action
project_ws/src/landing_pkg/boards/: custom_board10x10.yml  custom_board12x12.yml  custom_board1x1.yml  custom_board2x2.yml  custom_board3x3.yml  custom_board3x3_1.yml  custom_board45.yml  custom_board4x6.yml  custom_board5x5_6cm.yml  custom_board5x5_7cm.yml  custom_board6x6.yml  custom_board6x6_7cm.yml  custom_board8x6.yml  custom_board8x8.yml
project_ws/src/landing_pkg/launch/: ardrone.launch  ardrone_sim.launch  args.launch  arsys.launch  autolanding.launch  basic.launch  bootstrapper.launch  camera.launch  position_pids.launch  transformations.launch
project_ws/src/landing_pkg/msg/: ErrorStamped.msg
project_ws/src/landing_pkg/pid_config/: pid_diags.yaml
project_ws/src/landing_pkg/src/: TimeUtils.cpp  ar_sys_listener.cpp  auto_landing_boot.py  auto_landing_client.cpp  auto_landing_server.cpp  boot.cpp  boot.sh  error_monitor.cpp  lander.cpp  main_controller.cpp  mock_data_publisher.cpp  pose_to_stamped_yaw.cpp  quota_monitor.cpp  transform_bootstrapper.cpp  transform_to_stamped.cpp  vel_controller.cpp
project_ws/src/landing_pkg/src/headers/: TimeUtils.h
