cmake_minimum_required(VERSION 3.6)
project(ros_automatic_landing)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    project_ws/build/CMakeFiles/2.8.12.2/CompilerIdC/CMakeCCompilerId.c
    project_ws/build/CMakeFiles/2.8.12.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
    project_ws/devel/include/cvg_sim_gazebo_plugins/SetBias.h
    project_ws/devel/include/cvg_sim_gazebo_plugins/SetBiasRequest.h
    project_ws/devel/include/cvg_sim_gazebo_plugins/SetBiasResponse.h
    project_ws/devel/include/cvg_sim_msgs/Altimeter.h
    project_ws/devel/include/cvg_sim_msgs/Altitude.h
    project_ws/devel/include/cvg_sim_msgs/AttitudeCommand.h
    project_ws/devel/include/cvg_sim_msgs/Compass.h
    project_ws/devel/include/cvg_sim_msgs/ControllerState.h
    project_ws/devel/include/cvg_sim_msgs/HeadingCommand.h
    project_ws/devel/include/cvg_sim_msgs/HeightCommand.h
    project_ws/devel/include/cvg_sim_msgs/MotorCommand.h
    project_ws/devel/include/cvg_sim_msgs/MotorPWM.h
    project_ws/devel/include/cvg_sim_msgs/MotorStatus.h
    project_ws/devel/include/cvg_sim_msgs/PositionXYCommand.h
    project_ws/devel/include/cvg_sim_msgs/RawImu.h
    project_ws/devel/include/cvg_sim_msgs/RawMagnetic.h
    project_ws/devel/include/cvg_sim_msgs/RawRC.h
    project_ws/devel/include/cvg_sim_msgs/RC.h
    project_ws/devel/include/cvg_sim_msgs/RuddersCommand.h
    project_ws/devel/include/cvg_sim_msgs/ServoCommand.h
    project_ws/devel/include/cvg_sim_msgs/Supply.h
    project_ws/devel/include/cvg_sim_msgs/ThrustCommand.h
    project_ws/devel/include/cvg_sim_msgs/VelocityXYCommand.h
    project_ws/devel/include/cvg_sim_msgs/VelocityZCommand.h
    project_ws/devel/include/cvg_sim_msgs/YawrateCommand.h
    project_ws/devel/include/pid/PidConfig.h
    project_ws/devel/include/pid/StampedFloat64.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/diffdrive_plugin_6w.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/gazebo_ros_gps.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/gazebo_ros_imu.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/gazebo_ros_magnetic.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/gazebo_ros_sonar.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/reset_plugin.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_gazebo_plugins/sensor_model.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_quadrotor_controller/quadrotor_simple_controller.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_quadrotor_controller/quadrotor_state_controller.h
    project_ws/src/cvg_sim_gazebo_plugins/include/hector_quadrotor_gazebo_plugins/gazebo_ros_baro.h
    project_ws/src/cvg_sim_gazebo_plugins/src/diffdrive_plugin_6w.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/gazebo_ros_baro.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/gazebo_ros_gps.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/gazebo_ros_imu.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/gazebo_ros_magnetic.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/gazebo_ros_sonar.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/quadrotor_simple_controller.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/quadrotor_state_controller.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/reset_plugin.cpp
    project_ws/src/cvg_sim_gazebo_plugins/src/test_trajectory.cpp
    project_ws/src/cvg_sim_msgs/include/cvg_sim_msgs/RC/functions.h
    project_ws/src/cvg_sim_msgs/include/cvg_sim_msgs/ControlSource.h
    project_ws/src/landing_pkg/src/ar_sys_listener.cpp
    project_ws/src/landing_pkg/src/transform_bootstrapper.cpp
    project_ws/src/landing_pkg/src/transform_to_stamped.cpp
    project_ws/src/landing_pkg/src/vel_controller.cpp
    project_ws/src/message_to_tf/src/message_to_tf.cpp
    project_ws/src/pid/include/pid/controller.h
    project_ws/src/pid/include/pid/PidConfig.h
    project_ws/src/pid/src/autotune.cpp
    project_ws/src/pid/src/controller.cpp
    project_ws/src/pid/src/controllerOld.cpp
    project_ws/src/pid/src/plant_sim.cpp
    project_ws/src/pid/src/setpoint_node.cpp
    project_ws/src/pid/src/sim_time.cpp)

add_executable(ros_automatic_landing ${SOURCE_FILES})