<?xml version="1.0"?>
<package>
  <name>landing_pkg</name>
  <version>0.0.0</version>
  <description>The landing_pkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fra_anto@todo.todo">francesco anto</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/landing_pkg</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

<!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <!-- Fat SDK dependencies -->
  <!--<build_depend>binutils</build_depend>
  <build_depend>daemontools</build_depend>
  <build_depend>sdl</build_depend>
  <build_depend>gtk2</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libiw-dev</build_depend>
  <build_depend>git</build_depend>-->

  <!-- ROS Driver -->
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!--If Custom Messages and Services -->
  <build_depend>message_generation</build_depend>  
  
  <!--Other deps which may be useful in the future-->
  <!--<build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslint</build_depend>-->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!--If Custom Messages and Services -->
  <run_depend>message_runtime</run_depend>


  <!--<run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>camera_info_manager</run_depend>-->
  <!--<run_depend>nav_msgs</run_depend>-->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>